--- a/src/game.html
+++ b/src/game.html
@@ -62,13 +62,13 @@
         // Now the FUNCTION TO CALL THE MOVEMOUSE FUNCTION
         canvas.addEventListener("mousemove", function(evt) {
           var mousePos = calculateMousePos(evt);
-          if (ballX < canvas.width / 2) {
-            paddle1Y = mousePos.y - PADDLE_HEIGHT / 2;
-          }
-          // paddle1Y = mousePos.y -  (PADDLE_HEIGHT/2);
-          else if (ballX > canvas.width / 2) {
-            paddle2Y = mousePos.y - PADDLE_HEIGHT / 2;
-          }
+          // if(ballX < canvas.width/2){
+          // 	paddle1Y = mousePos.y -  (PADDLE_HEIGHT/2);
+          // }
+          paddle1Y = mousePos.y - PADDLE_HEIGHT / 2;
+          // else if(ballX >canvas.width/2){
+          // 	paddle2Y = mousePos.y -  (PADDLE_HEIGHT/2);
+          // }
           // paddle2Y = mousePos.y -  (PADDLE_HEIGHT/2);
           // console.log(mousePos.y);
         });
@@ -111,9 +111,14 @@
           // NOW ADD FUNCTIONALITY OF BOUNCING THE BALL IF ON PADDDLE : Note paddle1Y is top coord of paddle and paddle1y+paddleheight is bottom
           if (ballY > paddle1Y && ballY < paddle1Y + PADDLE_HEIGHT) {
             ballSpeedX = -ballSpeedX;
+
+            // If you want the fumctionality of ball angle to change based on where it hits the paddle we need to change BallY speed
+            var deltaY = ballY - (paddle1Y + PADDLE_HEIGHT / 2);
+            // If we just give the value of deltaY to ballspeed, ball moves very rapidly, so we take only say 30% of speedF
+            ballSpeedY = deltaY * 0.35;
           } else {
             ballReset();
-            player1Score++;
+            player2Score++;
           }
 
           if (ballX > canvas.width) {
@@ -121,7 +126,7 @@
               ballSpeedX = -ballSpeedX;
             } else {
               ballReset();
-              player2Score++;
+              player1Score++;
             }
           }
         }
